# Uncharted-Waters

./: .gitignore  README.md
一代/: README.md
三代/: README.md
二代/: README.md
二代/修改器/: README.md
二代/地图/: README.md
二代/强化版/: 1.9E6交易商品整理.md  1.9E6修改器整理.md  1.9E6论坛整理.md  1.9E6逆向经验教训.md  F5+系统详解-论坛原帖.md  F5+系统详解.md  README.md  更新历史.md
二代/强化版/ROM/: MD-1.9E6.7z  MD-1.9F5+修正2.7z  PC-1.9CIII修正版.7z
二代/强化版/tools/: patch_1_9e6_state_supply.py
二代/强化版/数据/: 1.9E6全部交易商品.csv  1.9E6全部交易商品.json
二代/港口布局图/: README.md
二代/船只图片/: README.md
二代/资料/: README.md  人物港口船只资料.md  海战中的转向与推进-全船型.md  海战中的转向与推进.md
二代/资料/论坛资料/: README.md  旧论坛资料补全.md  船只数据资料.md  贸易路线前100强.md
二代/资料/逆向资料/: README.md  manifest.json  剧情结构研究摘录.md  复刻可用数据清单.md  复刻系统蓝图.md  最小工具包设计.md  港口坐标与编号对照表.md  脚本可移植改造清单.md  逆向算法与提取脚本总览.md
二代/资料/逆向资料/assets/sea2_demo/: README.md
二代/资料/逆向资料/imported/sea2_demo/: README.md
二代/资料/逆向资料/toolkit/: README.md  pyproject.toml
二代/资料/逆向资料/toolkit/tests/: test_config.py  test_doctor.py  test_ls11.py  test_render_kao.py
二代/资料/逆向资料/toolkit/uw2toolkit/: __init__.py  cli.py  config.py  dat_extract.py  doctor.py  ls11.py  text.py
二代/资料/逆向资料/toolkit/uw2toolkit/render/: __init__.py  font.py  kao.py  portchip.py  portmap.py  worldmap.py
